plugins {
    id 'java'
    id 'maven-publish'
}


group = 'ashes.of'
version = '1.0.0-SNAPSHOT'


allprojects {
    group = 'ashes.of'

    apply plugin: 'java'

    java {
        targetCompatibility = JavaVersion.VERSION_17
        sourceCompatibility = JavaVersion.VERSION_17
    }

    buildscript {
        repositories {
            mavenLocal()
            mavenCentral()
        }
    }


    repositories {
        mavenLocal()
        mavenCentral()
    }


    dependencies {
        implementation 'com.google.code.findbugs:jsr305:3.0.2'
        implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
        implementation 'com.google.guava:guava:30.1.1-jre'

        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    }


    test {
        useJUnitPlatform()
    }
}
